--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "@testing-library/user-event": "^12.8.3",
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
+    "browser-image-compression": "^1.0.15",
     "graphql": "^15.5.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-dropzone": "^11.3.4",
+    "react-icons": "^4.2.0",
+    "react-loading-overlay": "^1.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
