--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-dropdown": "^1.9.2",
     "react-dropzone": "^11.3.4",
     "react-icons": "^4.2.0",
+    "react-lazyload": "^3.2.0",
     "react-loading-overlay": "^1.0.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "start": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
