--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-upload-client": "^16.0.0",
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.15",
+    "cloudinary": "^1.26.3",
     "graphql": "^15.5.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -20,11 +21,13 @@
     "react-icons": "^4.2.0",
     "react-lazyload": "^3.2.0",
     "react-loading-overlay": "^1.0.1",
+    "react-responsive-masonry": "^2.1.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "start": "^5.1.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
